--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:16
     container_name: uhelper-postgres
     restart: always
     volumes:
